<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout style="@style/btn_container_icon">

        <ImageView
            android:id="@+id/ivCreditCardIcon"
            style="@style/btn_form_icon"
            android:src="@drawable/ic_default"
            tools:ignore="ContentDescription" />

        <android.support.design.widget.TextInputLayout
            style="@style/btn_text_input_layout"
            android:id="@+id/etCreditCardNameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:labelFor="@+id/etCreditCardName"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/btn_error_layout">

            <EditText
                style="@style/btn_edit_text_field"
                android:id="@+id/etCreditCardName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="false"
                android:focusableInTouchMode="true"
                android:hint="@string/btn_credit_card_name_hint"
                android:inputType="text"
                android:maxLength="100"
                android:nextFocusDown="@+id/etCreditCardNumber"
                android:selectAllOnFocus="false"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout style="@style/btn_container_no_icon">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etCreditCardNumberLayout"
            style="@style/btn_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:labelFor="@+id/etCreditCardNumber"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/btn_error_layout">

            <EditText
                android:id="@+id/etCreditCardNumber"
                style="@style/btn_edit_text_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/btn_credit_card_number_hint"
                android:inputType="number"
                android:maxLength="20"
                android:nextFocusDown="@+id/etCreditCardExpiry"
                android:selectAllOnFocus="false"
                android:textColor="@color/color_dark_gray"
                android:textColorHint="@android:color/darker_gray"
                android:textColorLink="@android:color/darker_gray"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout style="@style/btn_container_no_icon"
                  android:baselineAligned="false">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etCreditCardExpiryLayout"
            style="@style/btn_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start"

            android:labelFor="@+id/etCreditCardExpiry"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/btn_error_layout">

            <EditText
                android:id="@+id/etCreditCardExpiry"
                style="@style/btn_edit_text_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:hint="@string/btn_credit_card_expiry"
                android:inputType="number"
                android:maxLength="4"
                android:nextFocusDown="@+id/etCreditCardExpiryYear"
                android:selectAllOnFocus="true"
                android:textSize="16sp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etCreditCardCVCLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:gravity="start"
            android:labelFor="@+id/etCreditCardCVC"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/btn_error_layout">

            <EditText
                android:id="@+id/etCreditCardCVC"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:hint="@string/btn_credit_card_cvc_hint"
                android:inputType="number"
                android:maxLength="4"
                android:selectAllOnFocus="true"
                android:textAlignment="gravity"
                android:textSize="16sp"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</LinearLayout>
